# trino-iceberg-hive-ozone

./: .gitignore  README.md  docker-compose.yml  load_fake_data.py  pyproject.toml
hive/: Dockerfile  hive-site.xml
ozone/: ozone-site.xml
trino/: Dockerfile  core-site.xml
trino/catalog/: iceberg.properties
