[project]
name = "trino-iceberg-hive-ozone"
version = "0.1.0"
description = "Docker test environment for using Trino, Iceberg, Hive, and Ozone, using ofs:// and script load faker data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=38.2.0",
    "trino>=0.336.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
